--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --scrollbar-width: 12px; --header-border-line-height: 0px; --font: 'Calisto MT', 'Palatino Black', 'Book Antiqua', 'Georgia', 'Suez One', serif; --table-header-weight: 600; --hr-icon-symbol: ""; } body.theme-light.css-settings-manager { --note: #F8FBFF; --inactive: #8794A9; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app styled-scrollbars theme-light show-inline-title show-ribbon show-view-header is-maximized additional-editor-css folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-ignore-attachment-folder version-1-7-2 css-settings-manager Heading its-theme tab-auto sidebar-float-bottom folder-arrow file-explorer-boldless lig check-color check-bg tables-no-alt-column-background dataview-regular-table accent-color is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/zalenza/Abecedarium-theme/HEAD/theme.css
 BASE_THEME=dark
